# grapho

./: build_web.ps1  project_plan.md  task_list.md
crates/app/: Cargo.toml  index.html
crates/app/src/: app.rs  headless.rs  lib.rs  main.rs  node_graph.rs
crates/app/src/app/: eval.rs  io.rs  node_info.rs  spreadsheet.rs  ui.rs  undo.rs  viewport.rs  wrangle_help.rs
crates/app/src/node_graph/: menu.rs  mod.rs  params.rs  state.rs  utils.rs  viewer.rs
crates/core/: Cargo.toml
crates/core/src/: attributes.rs  eval.rs  graph.rs  lib.rs  mesh.rs  mesh_eval.rs  nodes_builtin.rs  project.rs  scene.rs
crates/render/: Cargo.toml
crates/render/src/: lib.rs  mesh_cache.rs  scene.rs  viewport.rs
crates/render/src/viewport/: callback.rs  mesh.rs  mod.rs  pipeline.rs
graphs/: default.json
